--- a/Pages/Cities/Cities.html
+++ b/Pages/Cities/Cities.html
@@ -40,13 +40,13 @@
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
     <link rel="stylesheet" href="./Cities.css">
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
  
 </head>
 <body>
 
-    <header>
+    <header class="animated-img">
         <custom-page-header transparent></custom-page-header>
     </header>
   
@@ -65,12 +65,12 @@
             <div class="text-media-wrapper">
                 <div class="text-media-left">
                     <div class="image-wrapper">
-                        <img src="../../Images/close-up of a Veloretti bicycle frame.png" alt="Close-up detail of Veloretti women's city bike frame" class="section-image" loading="eager">
+                        <img src="../../Images/close-up of a Veloretti bicycle frame.png" alt="Close-up detail of Veloretti women's city bike frame" class="section-image animated-img" loading="eager">
                     </div>
                 </div>
                 <div class="text-media-right">
                     <div class="image-wrapper image-wrapper-absolute">
-                        <img src="../../Images/woman riding .png" alt="Woman riding a Veloretti city bicycle" class="section-image" loading="lazy">
+                        <img src="../../Images/woman riding .png" alt="Woman riding a Veloretti city bicycle" class="section-image animated-img" loading="lazy">
                     </div>
                 </div>
                 <div class="text-media-content">
@@ -87,16 +87,12 @@
                 <div class="collection-slider">
                     <div class="collection-item">
                         <div class="collection-image-wrapper">
-                            <img src="../../Images/Veloretti Caféracer Classic bicycle.png" alt="Veloretti Caféracer Classic women's city bicycle with step-through frame" class="collection-image" loading="eager">
-                        </div>
-                        <div class="collection-info">
-                            <h3 class="collection-title">Caféracer</h3>
-                            <p class="collection-subtitle">Women</p>
+                            <img src="../../Images/Veloretti Caféracer Classic bicycle.png" alt="Veloretti Caféracer Classic women's city bicycle with step-through frame" class="collection-image animated-img" loading="eager">
                         </div>
                     </div>
                     <div class="collection-item">
                         <div class="collection-image-wrapper">
-                            <img src="../../Images/Veloretti Robyn City Bicycle.png" alt="Veloretti Robyn women's city bicycle with classic design" class="collection-image" loading="lazy">
+                            <img src="../../Images/Veloretti Robyn City Bicycle.png" alt="Veloretti Robyn women's city bicycle with classic design" class="collection-image animated-img" loading="lazy">
                         </div>
                         <div class="collection-info">
                             <h3 class="collection-title">Robyn</h3>
@@ -113,7 +109,7 @@
             <div class="text-media-static-wrapper">
                 <div class="text-media-static-left">
                     <div class="image-wrapper">
-                        <img src="../../Images/Text-media-static_custom-Media.png" alt="Veloretti men's city bicycle detail" class="section-image" loading="lazy">
+                        <img src="../../Images/Text-media-static_custom-Media.png" alt="Veloretti men's city bicycle detail" class="section-image animated-img" loading="lazy">
                     </div>
                 </div>
                 <div class="text-media-static-content">
@@ -121,11 +117,11 @@
                 </div>
                 <div class="text-media-static-right">
                     <div class="image-wrapper">
-                        <img src="../../Images/front fork .png" alt="Close-up of Veloretti men's city bike front fork" class="section-image" loading="lazy">
+                        <img src="../../Images/front fork .png" alt="Close-up of Veloretti men's city bike front fork" class="section-image animated-img" loading="lazy">
                     </div>
                 </div>
                 <div class="text-media-static-bottom">
-                    <img src="../../Images/Rear Wheel and Drivetrain of a Veloretti Electric Bicycle.png" alt="Rear wheel and drivetrain detail of Veloretti men's city bicycle" class="section-image-bottom" loading="lazy">
+                    <img src="../../Images/Rear Wheel and Drivetrain of a Veloretti Electric Bicycle.png" alt="Rear wheel and drivetrain detail of Veloretti men's city bicycle" class="section-image-bottom animated-img" loading="lazy">
                 </div>
             </div>
         </section>
