--- a/Pages/Product-Example/Product-Example.html
+++ b/Pages/Product-Example/Product-Example.html
@@ -42,8 +42,8 @@
     <link rel="stylesheet" href="Product-Example.css" />
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
   </head>
   <body>
     <custom-page-header></custom-page-header>
@@ -112,7 +112,7 @@
       <section class="feature-block layout-image-left">
           <div class="container grid-50-50">
               <div class="image-content">
-                  <img src="../../Images/bike-engine.png" alt="Veloretti Electric Ivy Two silent Bafang mid-drive motor with 65Nm torque" loading="lazy">
+                  <img src="../../Images/bike-engine.png" alt="Veloretti Electric Ivy Two silent Bafang mid-drive motor with 65Nm torque" loading="lazy" class="animated-img">
               </div>
               <div class="text-content">
                   <h2>Silent and<br>powerful mid-<br>motor</h2>
@@ -132,7 +132,7 @@
                   <p>Forget about shifting. The Enviolo stepless shifting system automatically adjusts the gear ratio so you can pedal at the same pace, uphill or down.</p>
               </div>
               <div class="image-content">
-                  <img src="../../Images/enviolo AUTOMATIC.png" alt="Enviolo automatic stepless shifting system on Veloretti Electric Ivy Two" loading="lazy">
+                  <img src="../../Images/enviolo AUTOMATIC.png" alt="Enviolo automatic stepless shifting system on Veloretti Electric Ivy Two" class="animated-img" loading="lazy">
               </div>
           </div>
       </section>
@@ -156,7 +156,7 @@
                   <p>Safety first. The integrated hyperbolic rear light ensures you are visible from all angles. It even brightens when you brake.</p>
               </div>
               <div class="image-content">
-                  <img src="../../Images/rear led brake ligth.png" alt="Veloretti Electric Ivy Two integrated hyperbolic rear LED brake light for safety" loading="lazy">
+                  <img src="../../Images/rear led brake ligth.png" alt="Veloretti Electric Ivy Two integrated hyperbolic rear LED brake light for safety" class="animated-img" loading="lazy">
               </div>
           </div>
       </section>
@@ -168,7 +168,7 @@
       <section class="feature-block layout-image-left">
           <div class="container grid-50-50">
               <div class="image-content">
-                  <img src="../../Images/black grip..png" alt="Veloretti Electric Ivy Two handlebar grip with GPS safety tracking feature" loading="lazy">
+                  <img src="../../Images/black grip..png" alt="Veloretti Electric Ivy Two handlebar grip with GPS safety tracking feature" class="animated-img" loading="lazy">
               </div>
               <div class="text-content">
                   <h2>Safety tracking</h2>
@@ -184,7 +184,7 @@
                   <p>Stop on a dime. High-quality Shimano hydraulic disc brakes give you powerful stopping power in all weather conditions.</p>
               </div>
               <div class="image-content">
-                  <img src="../../Images/brake disc.png" alt="Shimano hydraulic disc brakes on Veloretti Electric Ivy Two for powerful stopping" loading="lazy">
+                  <img src="../../Images/brake disc.png" alt="Shimano hydraulic disc brakes on Veloretti Electric Ivy Two for powerful stopping" class="animated-img" loading="lazy">
               </div>
           </div>
       </section>
@@ -192,7 +192,7 @@
       <section class="bike-showcase">
           <div class="container">
               <div class="interactive-image-wrapper">
-                  <img src="../../Images/Bike-highlights_wrapper.png" alt="Full side profile of the bike" class="showcase-img animated-img" loading="lazy">
+                  <img src="../../Images/Bike-highlights_wrapper.png" alt="Full side profile of the bike"  class="showcase-img animated-img" loading="lazy">
                   
                   
               </div>
