--- a/Pages/Products/Products.html
+++ b/Pages/Products/Products.html
@@ -43,9 +43,9 @@
     <link rel="stylesheet" href="Products.css">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
-    <script defer src="Products.js"></script>
+    <script src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
+    <script  src="Products.js"></script>
 </head>
 <body>
 
