--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -40,8 +40,8 @@
     <link rel="stylesheet" href="./AboutUs.css">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
 </head>
 <body>
     <header>
