--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
     <link rel="stylesheet" href="Cart.css">
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
 </head>
 <body>
     <custom-page-header></custom-page-header>
