--- a/Pages/Electric/Electric.html
+++ b/Pages/Electric/Electric.html
@@ -40,8 +40,8 @@
     <link rel="stylesheet" href="./Electric.css">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script src="../../components/custom-footer.js" defer></script>
-    <script src="../../components/custom-page-header.js" defer></script>
+    <script src="../../components/custom-footer.js"></script>
+    <script src="../../components/custom-page-header.js"></script>
 </head>
 <body>
 
