--- a/Pages/Kids/kids.html
+++ b/Pages/Kids/kids.html
@@ -38,8 +38,8 @@
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
     
-    <script defer src="../../components/custom-page-header.js"></script>
-    <script defer src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js"></script>
+    <script  src="../../components/custom-footer.js"></script>
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
     <link rel="stylesheet" href="./Kids.css">
