--- a/Index.html
+++ b/Index.html
@@ -37,18 +37,20 @@
     <meta name="author" content="Veloretti">
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
+    <link rel="preload" href="shared.css" as="style">
     <link rel="stylesheet" href="shared.css">
     <script src="../shared.js" defer></script>
-    <link rel="stylesheet" href="../Pages/Home/Home.css">
-    <script src="../components/custom-page-header.js"></script>
-    <script  src="../components/custom-footer.js"></script>
+    <link rel="preload" href="../Pages/Home/Home.css" as="style">
+    <link  rel="stylesheet" href="../Pages/Home/Home.css">
+    <script src="../components/custom-page-header.js" defer></script>
+    <script  src="../components/custom-footer.js" defer></script>
 </head>
 <body>
   
     <custom-page-header></custom-page-header>
     <main class="main">
        
-        <section class="hero-section section animated-img"></section>
+        <section class="hero-section section animated-img" loading="eager"></section>
 
         
         <section class="about-section section">
