--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -37,11 +37,13 @@
     <meta name="author" content="Veloretti">
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
+    <link rel="preload" href="./AboutUs.css" as="style">
     <link rel="stylesheet" href="./AboutUs.css">
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script  src="../../components/custom-page-header.js"></script>
-    <script  src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js" defer></script>
+    <script  src="../../components/custom-footer.js" defer></script>
 </head>
 <body>
     <header>
