--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -32,11 +32,13 @@
     <meta name="author" content="Veloretti">
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
+    <link rel="preload" href="Cart.css" as="style">
     <link rel="stylesheet" href="Cart.css">
-    <script  src="../../components/custom-page-header.js"></script>
-    <script  src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js" defer></script>
+    <script  src="../../components/custom-footer.js" defer></script>
 </head>
 <body>
     <custom-page-header></custom-page-header>
