--- a/Pages/Kids/kids.html
+++ b/Pages/Kids/kids.html
@@ -38,12 +38,14 @@
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
     
-    <script  src="../../components/custom-page-header.js"></script>
-    <script  src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js" defer></script>
+    <script  src="../../components/custom-footer.js" defer></script>
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
+    <link rel="preload" href="./Kids.css" as="style">
     <link rel="stylesheet" href="./Kids.css">
-    <link rel="stylesheet" href="./Kids.js">
+    <script src="./Kids.js" defer></script>
 </head>
 <body>
 
