--- a/Pages/Product-Example/Product-Example.html
+++ b/Pages/Product-Example/Product-Example.html
@@ -39,11 +39,13 @@
     <meta name="author" content="Veloretti">
     <meta name="theme-color" content="#000000">
     <meta name="format-detection" content="telephone=no">
+    <link rel="preload" href="Product-Example.css" as="style">
     <link rel="stylesheet" href="Product-Example.css" />
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script  src="../../components/custom-page-header.js"></script>
-    <script  src="../../components/custom-footer.js"></script>
+    <script  src="../../components/custom-page-header.js" defer></script>
+    <script  src="../../components/custom-footer.js" defer></script>
   </head>
   <body>
     <custom-page-header></custom-page-header>
