--- a/Pages/Products/Products.html
+++ b/Pages/Products/Products.html
@@ -40,11 +40,13 @@
 
 
     
+    <link rel="preload" href="Products.css" as="style">
     <link rel="stylesheet" href="Products.css">
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
-    <script src="../../components/custom-page-header.js"></script>
-    <script  src="../../components/custom-footer.js"></script>
+    <script src="../../components/custom-page-header.js" defer></script>
+    <script  src="../../components/custom-footer.js" defer></script>
     <script  src="Products.js"></script>
 </head>
 <body>
