--- a/Pages/Profile/Profile.html
+++ b/Pages/Profile/Profile.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="../../Images/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in | Veloretti</title>
+    <link rel="preload" href="./Profile.css" as="style">
     <link rel="stylesheet" href="./Profile.css">
+    <link rel="preload" href="../../shared.css" as="style">
     <link rel="stylesheet" href="../../shared.css">
     <script src="../../shared.js" defer></script>
     
